--- a/tf_styles4_txt.css
+++ b/tf_styles4_txt.css
@@ -14,33 +14,90 @@
 
 */
 
-
 /* Import Basic Design Styles Used on All Screens */
 
 @import url("tf_designs.css");
 
-
-
 /* General Flex Styles */
+   body{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+   }
 
+   #left{
+      flex: 1 8 130px;
+   }
 
+   #right{
+      flex: 8 1 351px;
+   }
 
+   section .tips{
+      display: flex;
+   }
 
+   .tips{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+   }
 
+   article{
+      display: flex;
+      flex: 2 1 351px;
+   }
+
+   aside{
+      display: flex;
+      flex: 1 2 250px;
+   }
+
+   nav.horizontal ul{
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+   }
 
 /* ===============================
 	Mobile Devices: 0 to 480px 
    ===============================
 */
-	
+	@media only screen and (max-width:480px) {
+        nav.vertical ul{
+         display: flex;
+         flex-direction: column;
+         flex-wrap: wrap;
+         height: 240px;
+        }
 
+        section.left{
+         order: 99;
+        }
 
+        body footer{
+         order: 100;
+        }
 
+        a#navicon{
+         display: block;
+        }
+
+        nav.horizontal ul{
+         display: none;
+        }
+
+        a#navicon:hover+ul, nav.horizontal ul:hover{
+         display: block;
+        }
+    }
 
 /* ============================================
 	Tablet and Desktop Devices: 481px or more 
    ============================================
 */
-
-
-
+    @media only screen and (min-width:481) {
+      ul{
+         height: 160px;
+      }
+    }
